added folder img

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header center">
         <h1 class="heading">Это страничка о мистере Торе </h1>
-        <img class="header__img" width="50" src="paw2.jpg" alt="лапка">
+        <img class="header__img" width="50" src="img/paw2.jpg" alt="лапка">
     </div>
     <div class="content center">
 
@@ -21,9 +21,9 @@
         </h3>
 
         <div class="photo">
-            <img class="image" src="ТорМалыш.jpg" width="200" alt="photo">
-            <img class="image" src="Тор2.jpg" width="200" alt="photo">
-            <img class="image" src="Тор3.jpg" width="200" alt="photo">
+            <img class="image" src="img/ТорМалыш.jpg" width="200" alt="photo">
+            <img class="image" src="img/Тор2.jpg" width="200" alt="photo">
+            <img class="image" src="img/Тор3.jpg" width="200" alt="photo">
         </div>
 
         <h3 class="content__list">
@@ -45,10 +45,10 @@
         <h3 class="content__text">Для встречи со мной свяжитесь с моей мамой</h3>
 
         <div class="links">
-            <a href="#" class="link"><img src="email.svg" width="25" alt="email"></a>
-            <a href="#" class="link"><img src="vk.svg" width="25" alt="vk">
+            <a href="#" class="link"><img src="img/email.svg" width="25" alt="email"></a>
+            <a href="#" class="link"><img src="img/vk.svg" width="25" alt="vk">
             </a>
-            <a href="#" class="link"><img src="telegram.svg" width="25" alt="telegram"></a>
+            <a href="#" class="link"><img src="img/telegram.svg" width="25" alt="telegram"></a>
         </div>
 
     </div>
