added links for social media

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -45,10 +45,10 @@
         <h3 class="content__text">Для встречи со мной свяжитесь с моей мамой</h3>
 
         <div class="links">
-            <a href="#" class="link"><img src="img/email.svg" width="25" alt="email"></a>
-            <a href="#" class="link"><img src="img/vk.svg" width="25" alt="vk">
+            <a href="https://mail.ru/" class="link"><img src="img/email.svg" width="25" alt="email"></a>
+            <a href="https://vk.com/" class="link"><img src="img/vk.svg" width="25" alt="vk">
             </a>
-            <a href="#" class="link"><img src="img/telegram.svg" width="25" alt="telegram"></a>
+            <a href="https://web.telegram.org/k/" class="link"><img src="img/telegram.svg" width="25" alt="telegram"></a>
         </div>
 
     </div>
